working on main paper for the special issue

--- a/paper/regression_results.tex
+++ b/paper/regression_results.tex
@@ -2,21 +2,21 @@
 \toprule
 {} &  Coef. &  P>|t| &  Coef. &  P>|t| &  Coef. &  P>|t| &  Coef. &  P>|t| \\
 \midrule
-$CC$ to $C$ rate   & -0.042 &  0.000 & -0.007 &  0.000 &  0.017 &  0.000 &  0.111 &    0.0 \\
-$CD$ to $C$ rate   &  0.297 &  0.000 & -0.068 &  0.000 &  0.182 &  0.000 &  0.023 &    0.0 \\
-$C_r$ / $C_{max}$  &      - &      - &  1.856 &  0.000 &      - &      - &  1.255 &    0.0 \\
-$C_r$ / $C_{mean}$ & -0.468 &  0.000 & -0.577 &  0.000 &  0.525 &  0.000 & -0.120 &    0.0 \\
-$C_{max}$          & -0.068 &  0.000 &      - &      - & -0.021 &  0.403 &  1.129 &    0.0 \\
-$C_{mean}$         &  0.117 &  0.000 & -2.556 &  0.000 & -0.024 &  0.000 & -1.488 &    0.0 \\
-$C_{min}$          & -0.161 &  0.000 & -1.179 &  0.000 & -0.170 &  0.000 &      - &      - \\
-$C_{min}$ / $C_r$  &  0.057 &  0.000 & -0.320 &  0.000 &  0.125 &  0.000 &      - &      - \\
-$DC$ to $C$ rate   &  0.198 &  0.000 &  0.040 &  0.000 & -0.030 &  0.000 &  0.022 &    0.0 \\
-$k$                &  0.000 &  0.325 &  0.000 &  0.026 &  0.000 &  0.002 &  0.000 &    0.0 \\
-$n$                &  0.000 &  0.000 &      - &      - &      - &      - &      - &      - \\
-$p_e$              &      - &      - &      - &      - &  0.000 &  0.757 & -0.083 &    0.0 \\
-$p_n$              &      - &      - & -0.049 &  0.000 &      - &      - &      - &      - \\
-SSE                &  0.258 &  0.000 &  0.153 &  0.000 & -0.041 &  0.000 &  0.100 &    0.0 \\
-constant           &  0.695 &  0.000 &  1.522 &  0.000 & -0.057 &  0.018 & -0.472 &    0.0 \\
-memory usage       & -0.010 &  0.000 & -0.000 &  0.039 &      - &      - &      - &      - \\
+constant             &  0.695 &  0.000 &  0.560 &  0.000 &  0.627 &  0.000 &  0.345 &  0.005 \\
+$CC$ to $C$ rate     & -0.042 &  0.000 & -0.163 &  0.000 & -0.046 &  0.000 &  0.032 &  0.029 \\
+$CD$ to $C$ rate     &  0.297 &  0.000 &  0.064 &  0.000 &  0.412 &  0.000 &  0.292 &  0.000 \\
+$DC$ to $C$ rate     &  0.198 &  0.000 &  0.142 &  0.000 &  0.193 &  0.000 &  0.193 &  0.000 \\
+SSE                  &  0.258 &  0.000 &  0.328 &  0.000 &  0.190 &  0.000 &  0.228 &  0.000 \\
+$C_{max}$            & -0.068 &  0.000 & -0.048 &  0.214 & -0.040 &  0.347 & -0.011 &  0.936 \\
+$C_{min}$            & -0.161 &  0.000 & -0.029 &  0.367 & -0.049 &  0.017 &  0.008 &  0.912 \\
+$C_{mean}$           &  0.117 &  0.000 & -0.133 &  0.000 & -0.159 &  0.000 & -0.468 &  0.000 \\
+$C_{min}$ / $C_r$    &  0.057 &  0.000 & -0.006 &  0.322 &  0.054 &  0.000 &  0.034 &  0.099 \\
+$C_r$ / $C_{mean}$   & -0.468 &  0.000 & -0.073 &  0.000 & -0.150 &  0.000 &  0.094 &  0.000 \\
+$k$                  &  0.000 &  0.325 &  0.000 &  0.965 &  0.000 &  0.079 &  0.000 &  0.065 \\
+$n$                  &  0.000 &  0.000 &      - &      - &      - &      - &      - &      - \\
+memory usage         & -0.010 &  0.000 & -0.008 &  0.000 &      - &      - &      - &      - \\
+$C_r$ / $C_{median}$ &      - &      - &  0.069 &  0.001 & -0.142 &  0.000 &      - &      - \\
+$p_n$                &      - &      - & -0.131 &  0.010 &      - &      - & -0.278 &  0.048 \\
+$p_e$                &      - &      - &      - &      - & -0.071 &  0.016 &  0.320 &  0.024 \\
 \bottomrule
 \end{tabular}
