--- a/paper/regression_table.tex
+++ b/paper/regression_table.tex
@@ -1,25 +1,25 @@
 \begin{tabular}{lggccggccgg}
 \toprule
-& \multicolumn{2}{g}{Standard} & \multicolumn{2}{c}{Noisy} & \multicolumn{2}{g}{Probabilistic ending} & \multicolumn{2}{c}{Noisy probabilistic ending} & \multicolumn{2}{g}{Overall}\\
+& \multicolumn{2}{g}{Standard} & \multicolumn{2}{c}{Noisy} & \multicolumn{2}{g}{Probabilistic ending} & \multicolumn{2}{c}{Noisy probabilistic ending} \\
 \midrule
-& \multicolumn{2}{g}{\(R\) adjusted: 0.541} & \multicolumn{2}{c}{\(R\) adjusted: 0.639} & \multicolumn{2}{g}{\(R\) adjusted: 0.587} & \multicolumn{2}{c}{\(R\) adjusted: 0.577} & \multicolumn{2}{g}{\(R\) adjusted: 0.242} \\
-{} &  Coefficient &  \(p\)-value &  Coefficient &  \(p\)-value &  Coefficient &  \(p\)-value &  Coefficient &  \(p\)-value &  Coefficient &  \(p\)-value \\
+& \multicolumn{2}{g}{\(R\) adjusted: 0.541} & \multicolumn{2}{c}{\(R\) adjusted: 0.373} & \multicolumn{2}{g}{\(R\) adjusted: 0.457} & \multicolumn{2}{c}{\(R\) adjusted: 0.537} \\
+{} &  Coefficient &  \(p\)-value &  Coefficient &  \(p\)-value &  Coefficient &  \(p\)-value &  Coefficient &  \(p\)-value \\
 \midrule
-$CC$ to $C$ rate   & -0.042 &  0.000 & -0.007 &  0.000 &  0.017 &  0.000 &  0.111 &    0.0 & -0.099 &    0.0 \\
-$CD$ to $C$ rate   &  0.297 &  0.000 & -0.068 &  0.000 &  0.182 &  0.000 &  0.023 &    0.0 &  0.129 &    0.0 \\
-$C_r$ / $C_{max}$  &      - &      - &  1.856 &  0.000 &      - &      - &  1.256 &    0.0 &     - &      - \\
-$C_r$ / $C_{mean}$ & -0.468 &  0.000 & -0.577 &  0.000 &  0.525 &  0.000 & -0.120 &    0.0 &  0.300 &    0.0\\
-$C_{max}$          & -0.071 &  0.000 &      - &      - & -0.022 &  0.391 &  1.130 &    0.0 &   - &      -   \\
-$C_{mean}$         &  0.118 &  0.000 & -2.558 &  0.000 & -0.023 &  0.001 & -1.489 &    0.0 &   - &      -   \\
-$C_{min}$          & -0.161 &  0.000 & -1.179 &  0.000 & -0.170 &  0.000 &      - &      - &   - &      -   \\
-$C_{min}$ / $C_r$  &  0.057 &  0.000 & -0.320 &  0.000 &  0.125 &  0.000 &      - &      - & -0.103 &    0.0 \\
-$DC$ to $C$ rate   &  0.198 &  0.000 &  0.040 &  0.000 & -0.030 &  0.000 &  0.022 &    0.0 &  0.064 &    0.0 \\
-$k$                &  0.000 &  0.319 &  0.000 &  0.020 &  0.000 &  0.002 &  0.000 &    0.0 &   - &      -   \\
-$n$                &  0.000 &  0.000 &      - &      - &      - &      - &      - &      - &   - &      -   \\
-$p_e$              &      - &      - &      - &      - &  0.000 &  0.847 & -0.083 &    0.0 &   - &      -   \\
-$p_n$              &      - &      - & -0.048 &  0.000 &      - &      - &      - &      - &   - &      -   \\
-SSE                &  0.258 &  0.000 &  0.153 &  0.000 & -0.041 &  0.000 &  0.100 &    0.0 &  0.056 &    0.0 \\
-constant           &  0.697 &  0.000 &  1.522 &  0.000 & -0.057 &  0.019 & -0.472 &    0.0 &  0.178 &    0.0 \\
-memory usage       & -0.010 &  0.000 & -0.000 &  0.035 &      - &      - &      - &      - &  - &      -   \\
+constant             &  0.695 &  0.000 &  0.560 &  0.000 &  0.627 &  0.000 &  0.345 &  0.005 \\
+$CC$ to $C$ rate     & -0.042 &  0.000 & -0.163 &  0.000 & -0.046 &  0.000 &  0.032 &  0.029 \\
+$CD$ to $C$ rate     &  0.297 &  0.000 &  0.064 &  0.000 &  0.412 &  0.000 &  0.292 &  0.000 \\
+$DC$ to $C$ rate     &  0.198 &  0.000 &  0.142 &  0.000 &  0.193 &  0.000 &  0.193 &  0.000 \\
+SSE                  &  0.258 &  0.000 &  0.328 &  0.000 &  0.190 &  0.000 &  0.228 &  0.000 \\
+$C_{max}$            & -0.068 &  0.000 & -0.048 &  0.214 & -0.040 &  0.347 & -0.011 &  0.936 \\
+$C_{min}$            & -0.161 &  0.000 & -0.029 &  0.367 & -0.049 &  0.017 &  0.008 &  0.912 \\
+$C_{mean}$           &  0.117 &  0.000 & -0.133 &  0.000 & -0.159 &  0.000 & -0.468 &  0.000 \\
+$C_{min}$ / $C_r$    &  0.057 &  0.000 & -0.006 &  0.322 &  0.054 &  0.000 &  0.034 &  0.099 \\
+$C_r$ / $C_{mean}$   & -0.468 &  0.000 & -0.073 &  0.000 & -0.150 &  0.000 &  0.094 &  0.000 \\
+$k$                  &  0.000 &  0.325 &  0.000 &  0.965 &  0.000 &  0.079 &  0.000 &  0.065 \\
+$n$                  &  0.000 &  0.000 &      - &      - &      - &      - &      - &      - \\
+memory usage         & -0.010 &  0.000 & -0.008 &  0.000 &      - &      - &      - &      - \\
+$C_r$ / $C_{median}$ &      - &      - &  0.069 &  0.001 & -0.142 &  0.000 &      - &      - \\
+$p_n$                &      - &      - & -0.131 &  0.010 &      - &      - & -0.278 &  0.048 \\
+$p_e$                &      - &      - &      - &      - & -0.071 &  0.016 &  0.320 &  0.024 \\
 \bottomrule
 \end{tabular}
