--- a/paper/correlation_table_four_types.tex
+++ b/paper/correlation_table_four_types.tex
@@ -1,29 +1,26 @@
 \begin{tabular}{lrrrrrrrr}
-\toprule
-{} &  Normalized_Rank &  Median_score &  Normalized_Rank &  Median_score &  Normalized_Rank &  Median_score &  Normalized_Rank &  Median_score \\
-\midrule
-$CC$ to $C$ rate     &           -0.501 &         0.501 &            0.413 &        -0.504 &            0.408 &        -0.323 &            0.260 &         0.023 \\
-$CD$ to $C$ rate     &            0.226 &        -0.199 &            0.457 &        -0.331 &            0.320 &        -0.017 &            0.205 &        -0.220 \\
-$C_r$                &           -0.323 &         0.383 &            0.711 &        -0.678 &            0.714 &        -0.832 &            0.579 &        -0.136 \\
-$C_r$ / $C_{max}$    &           -0.323 &         0.381 &            0.616 &        -0.551 &            0.715 &        -0.833 &            0.536 &        -0.117 \\
-$C_r$ / $C_{mean}$   &           -0.331 &         0.357 &            0.731 &        -0.740 &            0.721 &        -0.861 &            0.650 &        -0.621 \\
-$C_r$ / $C_{median}$ &           -0.330 &         0.353 &            0.652 &        -0.669 &            0.713 &        -0.852 &            0.330 &        -0.466 \\
-$C_{max}$            &           -0.000 &         0.050 &            0.000 &         0.023 &            0.000 &         0.046 &            0.000 &        -0.004 \\
-$C_{mean}$           &           -0.000 &         0.229 &            0.000 &         0.271 &           -0.000 &         0.200 &            0.000 &         0.690 \\
-$C_{median}$         &           -0.000 &         0.209 &           -0.000 &         0.240 &           -0.000 &         0.187 &            0.000 &         0.673 \\
-$C_{min}$            &           -0.000 &         0.085 &            0.000 &        -0.017 &           -0.000 &         0.007 &           -0.000 &         0.041 \\
-$C_{min}$ / $C_r$    &            0.109 &        -0.080 &           -0.358 &         0.250 &           -0.134 &         0.151 &           -0.368 &         0.113 \\
-$DC$ to $C$ rate     &            0.127 &        -0.100 &            0.509 &        -0.504 &           -0.018 &         0.033 &            0.341 &        -0.016 \\
-$DD$ to $C$ rate     &            0.412 &        -0.396 &            0.533 &        -0.436 &           -0.103 &         0.176 &            0.378 &        -0.263 \\
-$N$                  &            0.000 &        -0.009 &           -0.000 &         0.002 &           -0.000 &         0.003 &           -0.000 &         0.001 \\
-$k$                  &            0.000 &        -0.002 &           -0.000 &         0.002 &           -0.000 &         0.001 &           -0.000 &        -0.008 \\
-$n$                  &           -0.000 &        -0.125 &            0.000 &        -0.024 &              NaN &           NaN &              NaN &           NaN \\
-$p_e$                &              NaN &           NaN &              NaN &           NaN &           -0.000 &         0.165 &           -0.000 &        -0.058 \\
-$p_n$                &              NaN &           NaN &           -0.000 &         0.207 &              NaN &           NaN &           -0.000 &        -0.650 \\
-Make use of game     &           -0.003 &        -0.022 &            0.025 &        -0.082 &           -0.053 &        -0.108 &            0.013 &        -0.016 \\
-Make use of length   &           -0.158 &         0.124 &            0.005 &        -0.123 &           -0.025 &        -0.090 &            0.014 &        -0.016 \\
-SSE                  &            0.473 &        -0.452 &            0.463 &        -0.337 &           -0.157 &         0.224 &            0.305 &        -0.259 \\
-memory usage         &           -0.098 &         0.108 &           -0.009 &        -0.017 &              NaN &           NaN &              NaN &           NaN \\
-stochastic           &            0.006 &        -0.024 &            0.022 &        -0.026 &            0.002 &        -0.130 &            0.021 &        -0.013 \\
-\bottomrule
+ & Normalized_Rank & Median_score & Normalized_Rank & Median_score & Normalized_Rank & Median_score & Normalized_Rank & Median_score \\
+$CC$ to $C$ rate & -0.501000 & 0.501000 & -0.210000 & 0.194000 & -0.336000 & 0.348000 & 0.087000 & 0.015000 \\
+$CD$ to $C$ rate & 0.226000 & -0.199000 & 0.337000 & -0.235000 & 0.458000 & -0.352000 & 0.609000 & -0.372000 \\
+$DC$ to $C$ rate & 0.127000 & -0.100000 & 0.227000 & -0.111000 & 0.164000 & -0.105000 & 0.410000 & -0.203000 \\
+$DD$ to $C$ rate & 0.412000 & -0.396000 & 0.549000 & -0.391000 & 0.433000 & -0.378000 & 0.615000 & -0.407000 \\
+$C_r$ & -0.323000 & 0.383000 & 0.298000 & -0.051000 & -0.060000 & 0.160000 & 0.595000 & -0.213000 \\
+$C_{max}$ & 0.000000 & 0.050000 & -0.000000 & 0.244000 & -0.000000 & 0.079000 & -0.000000 & 0.296000 \\
+$C_{min}$ & 0.000000 & 0.085000 & 0.000000 & -0.070000 & 0.000000 & 0.128000 & 0.000000 & 0.000000 \\
+$C_{median}$ & 0.000000 & 0.209000 & 0.000000 & 0.572000 & -0.000000 & 0.324000 & 0.000000 & 0.667000 \\
+$C_{mean}$ & 0.000000 & 0.229000 & -0.000000 & 0.583000 & -0.000000 & 0.354000 & -0.000000 & 0.689000 \\
+$C_r$ / $C_{max}$  & -0.323000 & 0.381000 & 0.307000 & -0.076000 & -0.060000 & 0.156000 & 0.608000 & -0.246000 \\
+$C_{min}$ / $C_r$ & 0.109000 & -0.080000 & -0.141000 & -0.011000 & 0.024000 & 0.029000 & -0.335000 & 0.092000 \\
+$C_r$ / $C_{median}$ & -0.330000 & 0.353000 & 0.326000 & -0.258000 & -0.065000 & 0.111000 & 0.614000 & -0.464000 \\
+$C_r$ / $C_{mean}$ & -0.331000 & 0.357000 & 0.325000 & -0.228000 & -0.066000 & 0.114000 & 0.617000 & -0.431000 \\
+$N$ & -0.000000 & -0.009000 & -0.000000 & -0.017000 & -0.000000 & 0.011000 & 0.000000 & 0.139000 \\
+$k$ & -0.000000 & -0.002000 & -0.000000 & -0.003000 & -0.000000 & 0.010000 & -0.000000 & 0.035000 \\
+$n$ & -0.000000 & -0.125000 & -0.000000 & -0.392000 & - & - & - & - \\
+$p_n$ & - & - & 0.000000 & -0.244000 & - & - & 0.000000 & -0.272000 \\
+$p_e$ & - & - & - & - & 0.000000 & 0.257000 & 0.000000 & 0.568000 \\
+Make use of game & -0.003000 & -0.022000 & -0.047000 & 0.014000 & -0.046000 & 0.022000 & -0.110000 & 0.057000 \\
+Make use of length & -0.158000 & 0.124000 & -0.224000 & 0.139000 & -0.173000 & 0.128000 & -0.206000 & 0.115000 \\
+SSE & 0.473000 & -0.452000 & 0.589000 & -0.412000 & 0.458000 & -0.418000 & 0.571000 & -0.383000 \\
+stochastic & 0.006000 & -0.024000 & 0.010000 & -0.007000 & -0.001000 & 0.001000 & -0.001000 & 0.002000 \\
+memory usage & -0.098000 & 0.108000 & -0.080000 & 0.114000 & - & - & - & - \\
 \end{tabular}
