--- a/paper/correlations_table.tex
+++ b/paper/correlations_table.tex
@@ -1,31 +1,31 @@
 \begin{tabular}{lggccggccggg}
     \toprule
-    &  \multicolumn{2}{g}{Standard} & \multicolumn{2}{c}{Noisy} & \multicolumn{2}{g}{Probabilistic ending} &  \multicolumn{2}{c}{Noisy probabilistic ending} &  \multicolumn{2}{g}{Overall} \\
+    &  \multicolumn{2}{g}{Standard} & \multicolumn{2}{c}{Noisy} & \multicolumn{2}{g}{Probabilistic ending} &  \multicolumn{2}{c}{Noisy probabilistic ending} \\
 \midrule
-{} &  $r$ &  median score &  $r$ &  median score &  $r$ &  median score &  $r$ &  median score &  $r$ &  median score\\
+{} &  $r$ &  median score &  $r$ &  median score &  $r$ &  median score &  $r$ &  median score \\
 \midrule
-$CC$ to $C$ rate     & -0.501 &  0.501 &   0.414 &  -0.504 &   0.408 &  -0.323 &   0.260 &   0.022 &  0.108 &   0.081 \\
-$CD$ to $C$ rate     &  0.226 & -0.199 &   0.456 &  -0.330 &   0.320 &  -0.017 &   0.205 &  -0.220 &  0.281 &  -0.177 \\
-$C_r$                & -0.323 &  0.384 &   0.711 &  -0.678 &   0.714 &  -0.832 &   0.579 &  -0.135 &  0.360 &  -0.124 \\
-$C_r$ / $C_{max}$    & -0.323 &  0.381 &   0.616 &  -0.551 &   0.714 &  -0.833 &   0.536 &  -0.116 &  0.395 &  -0.265 \\
-$C_r$ / $C_{mean}$   & -0.331 &  0.358 &   0.731 &  -0.740 &   0.721 &  -0.861 &   0.649 &  -0.621 &  0.428 &  -0.439 \\
-$C_r$ / $C_{median}$ & -0.331 &  0.353 &   0.652 &  -0.669 &   0.712 &  -0.852 &   0.330 &  -0.466 &  0.294 &  -0.405 \\
-$C_r$ / $C_{min}$    &  0.109 & -0.080 &  -0.358 &   0.250 &  -0.134 &   0.150 &  -0.368 &   0.113 &  0.000 &   0.280 \\
-$C_{max}$            & -0.000 &  0.049 &   0.000 &   0.023 &  -0.000 &   0.046 &   0.000 &  -0.004 & -0.000 &   0.553 \\
-$C_{mean}$           & -0.000 &  0.229 &  -0.000 &   0.271 &   0.000 &   0.200 &   0.000 &   0.690 & -0.000 &   0.544 \\
-$C_{median}$         &  0.000 &  0.209 &  -0.000 &   0.240 &  -0.000 &   0.187 &  -0.000 &   0.673 &  0.000 &  -0.250 \\
-$C_{min}$            &  0.000 &  0.084 &   0.000 &  -0.017 &  -0.000 &   0.007 &  -0.000 &   0.041 & -0.161 &  -0.190 \\
-$DC$ to $C$ rate     &  0.127 & -0.100 &   0.509 &  -0.504 &  -0.018 &   0.033 &   0.341 &  -0.016 &  0.173 &  -0.088 \\
-$DD$ to $C$ rate     &  0.412 & -0.396 &   0.533 &  -0.436 &  -0.103 &   0.176 &   0.378 &  -0.263 &  0.237 &  -0.239 \\
-$N$                  &  0.000 & -0.009 &  -0.000 &   0.002 &  -0.000 &   0.003 &  -0.000 &   0.001 & -0.000 &  -0.001 \\
-$k$                  &  0.000 & -0.002 &  -0.000 &   0.003 &  -0.000 &   0.001 &  -0.000 &  -0.008 &  0.000 &  -0.001 \\
-$n$                  &  0.000 & -0.125 &  -0.000 &  -0.024 &       - &       - &       - &       - &  0.000 &  -0.074 \\
-$p_e$                &      - &      - &        - &     - &    0.000 &   0.165 &   0.000 &  -0.058 &  0.000 &   0.055 \\
-$p_n$                &      - &      - &  -0.000 &   0.207 &       - &       - &  -0.000 &  -0.650 & -0.000 &  -0.256 \\
-Make use of game     & -0.003 & -0.022 &   0.025 &  -0.082 &  -0.053 &  -0.108 &   0.013 &  -0.016 & -0.004 &  -0.053 \\
-Make use of length   & -0.158 &  0.124 &   0.005 &  -0.123 &  -0.025 &  -0.090 &   0.014 &  -0.016 & -0.041 &  -0.026 \\
-SSE                  &  0.473 & -0.452 &   0.463 &  -0.337 &  -0.156 &   0.223 &   0.305 &  -0.259 &  0.233 &  -0.167 \\
-memory usage         & -0.082 &  0.095 &  -0.007 &  -0.017 &       - &     - &     - &           - & -0.053 &   0.046 \\
-stochastic           &  0.006 & -0.024 &   0.022 &  -0.026 &   0.002 &  -0.130 &   0.021 &  -0.013 &  0.013 &  -0.048 \\
+$CC$ to $C$ rate & -0.501 & 0.501 & -0.210 & 0.194 & -0.336 & 0.348 & 0.087 & 0.015 \\
+$CD$ to $C$ rate & 0.226 & -0.199 & 0.337 & -0.235 & 0.458 & -0.352 & 0.609 & -0.372 \\
+$DC$ to $C$ rate & 0.127 & -0.100 & 0.227 & -0.111 & 0.164 & -0.105 & 0.410 & -0.203 \\
+$DD$ to $C$ rate & 0.412 & -0.396 & 0.549 & -0.391 & 0.433 & -0.378 & 0.615 & -0.407 \\
+$C_r$ & -0.323 & 0.383 & 0.298 & -0.051 & -0.060 & 0.160 & 0.595 & -0.213 \\
+$C_{max}$ & 0.000& 0.050 & -0.000& 0.244 & -0.000& 0.079 & -0.000& 0.296 \\
+$C_{min}$ & 0.000& 0.085 & 0.000& -0.070 & 0.000& 0.128 & 0.000& 0.000\\
+$C_{median}$ & 0.000& 0.209 & 0.000& 0.572 & -0.000& 0.324 & 0.000& 0.667 \\
+$C_{mean}$ & 0.000& 0.229 & -0.000& 0.583 & -0.000& 0.354 & -0.000& 0.689 \\
+$C_r$ / $C_{max}$  & -0.323 & 0.381 & 0.307 & -0.076 & -0.060 & 0.156 & 0.608 & -0.246 \\
+$C_{min}$ / $C_r$ & 0.109 & -0.080 & -0.141 & -0.011 & 0.024 & 0.029 & -0.335 & 0.092 \\
+$C_r$ / $C_{median}$ & -0.330 & 0.353 & 0.326 & -0.258 & -0.065 & 0.111 & 0.614 & -0.464 \\
+$C_r$ / $C_{mean}$ & -0.331 & 0.357 & 0.325 & -0.228 & -0.066 & 0.114 & 0.617 & -0.431 \\
+$N$ & -0.000& -0.009 & -0.000& -0.017 & -0.000& 0.011 & 0.000& 0.139 \\
+$k$ & -0.000& -0.002 & -0.000& -0.003 & -0.000& 0.010 & -0.000& 0.035 \\
+$n$ & -0.000& -0.125 & -0.000& -0.392 & - & - & - & - \\
+$p_n$ & - & - & 0.000& -0.244 & - & - & 0.000& -0.272 \\
+$p_e$ & - & - & - & - & 0.000& 0.257 & 0.000& 0.568 \\
+Make use of game & -0.003 & -0.022 & -0.047 & 0.014 & -0.046 & 0.022 & -0.110 & 0.057 \\
+Make use of length & -0.158 & 0.124 & -0.224 & 0.139 & -0.173 & 0.128 & -0.206 & 0.115 \\
+SSE & 0.473 & -0.452 & 0.589 & -0.412 & 0.458 & -0.418 & 0.571 & -0.383 \\
+stochastic & 0.006 & -0.024 & 0.010 & -0.007 & -0.001 & 0.001 & -0.001 & 0.002 \\
+memory usage & -0.098 & 0.108 & -0.080 & 0.114 & - & - & - & - \\
 \bottomrule
 \end{tabular}
