--- a/paper/perfomances_table.tex
+++ b/paper/perfomances_table.tex
@@ -1,21 +1,21 @@
 \begin{tabular}{lllllllll}
 \toprule
-{} &                     Name & \$\textbackslash bar\{r\}\$ &                       Name & \$\textbackslash bar\{r\}\$ &                       Name & \$\textbackslash bar\{r\}\$ &                       Name & \$\textbackslash bar\{r\}\$ \\
+{} &                     Name & \$\textbackslash bar\{r\}\$ &                        Name & \$\textbackslash bar\{r\}\$ &                       Name & \$\textbackslash bar\{r\}\$ &                       Name & \$\textbackslash bar\{r\}\$ \\
 \midrule
-0  &            Evolved HMM 5 &     0.007 &                       MEM2 &     0.061 &             Evolved FSM 16 &       0.0 &                   Defector &     0.006 \\
-1  &           Evolved FSM 16 &      0.01 &       Spiteful Tit For Tat &     0.063 &    Evolved FSM 16 Noise 05 &     0.013 &          Better and Better &     0.011 \\
-2  &     EvolvedLookerUp2\_2\_2 &     0.011 &           Nice Meta Winner &     0.066 &                       MEM2 &     0.027 &                 Aggravater &     0.014 \\
-3  &  Evolved FSM 16 Noise 05 &     0.017 &                    Grudger &     0.067 &              Evolved HMM 5 &     0.043 &                  Fortress4 &     0.021 \\
-4  &        PSO Gambler 2\_2\_2 &     0.022 &    Meta Winner Long Memory &     0.073 &       EvolvedLookerUp2\_2\_2 &     0.049 &            Tricky Defector &     0.038 \\
-5  &              Evolved ANN &     0.029 &                   Forgiver &     0.074 &       Spiteful Tit For Tat &     0.059 &    Meta Winner Long Memory &     0.049 \\
-6  &            Evolved ANN 5 &     0.034 &               Fool Me Once &     0.074 &           Nice Meta Winner &     0.069 &     Meta Winner Memory One &      0.05 \\
-7  &        PSO Gambler 1\_1\_1 &     0.037 &                Meta Winner &     0.075 &         NMWE Finite Memory &     0.069 &  Meta Winner Finite Memory &      0.05 \\
-8  &            Evolved FSM 4 &     0.049 &     Meta Winner Memory One &     0.076 &         NMWE Deterministic &      0.07 &     Meta Winner Stochastic &     0.051 \\
-9  &         PSO Gambler Mem1 &      0.05 &  Meta Winner Finite Memory &     0.077 &                    Grudger &      0.07 &  Meta Winner Deterministic &     0.052 \\
-10 &                 Winner12 &      0.06 &  Meta Winner Deterministic &     0.078 &           NMWE Long Memory &     0.074 &                Meta Winner &     0.053 \\
-11 &             Fool Me Once &     0.061 &         NMWE Deterministic &     0.087 &  Nice Meta Winner Ensemble &     0.076 &       Meta Winner Ensemble &     0.059 \\
-12 &                      DBS &     0.071 &           NMWE Long Memory &     0.087 &       EvolvedLookerUp1\_1\_1 &     0.077 &                  Fortress3 &      0.07 \\
-13 &            DoubleCrosser &     0.072 &         CollectiveStrategy &     0.087 &            NMWE Memory One &      0.08 &         CollectiveStrategy &     0.077 \\
-14 &              BackStabber &     0.075 &                   Defector &     0.089 &            NMWE Stochastic &     0.085 &                   Prober 3 &      0.08 \\
+0  &            Evolved HMM 5 &     0.007 &                         DBS &       0.0 &             Evolved FSM 16 &       0.0 &                     Raider &     0.022 \\
+1  &           Evolved FSM 16 &      0.01 &     Evolved FSM 16 Noise 05 &     0.008 &    Evolved FSM 16 Noise 05 &     0.013 &                       MEM2 &     0.037 \\
+2  &     EvolvedLookerUp2\_2\_2 &     0.011 &      Evolved ANN 5 Noise 05 &     0.013 &                       MEM2 &     0.027 &                   Prober 3 &     0.039 \\
+3  &  Evolved FSM 16 Noise 05 &     0.017 &                 BackStabber &     0.024 &              Evolved HMM 5 &     0.043 &    Evolved FSM 16 Noise 05 &     0.048 \\
+4  &        PSO Gambler 2\_2\_2 &     0.022 &               DoubleCrosser &     0.025 &       EvolvedLookerUp2\_2\_2 &     0.049 &                Hard Prober &     0.072 \\
+5  &              Evolved ANN &     0.029 &               Evolved ANN 5 &     0.028 &       Spiteful Tit For Tat &     0.059 &       Spiteful Tit For Tat &     0.078 \\
+6  &            Evolved ANN 5 &     0.034 &                 Evolved ANN &     0.038 &           Nice Meta Winner &     0.069 &          Better and Better &     0.089 \\
+7  &        PSO Gambler 1\_1\_1 &     0.037 &        Spiteful Tit For Tat &     0.051 &         NMWE Finite Memory &     0.069 &                    Grudger &     0.091 \\
+8  &            Evolved FSM 4 &     0.049 &               Evolved HMM 5 &     0.051 &         NMWE Deterministic &      0.07 &                  Fortress4 &     0.096 \\
+9  &         PSO Gambler Mem1 &      0.05 &              Level Punisher &     0.052 &                    Grudger &      0.07 &     Meta Winner Memory One &     0.099 \\
+10 &                 Winner12 &      0.06 &                   Omega TFT &     0.059 &           NMWE Long Memory &     0.074 &           NMWE Long Memory &     0.099 \\
+11 &             Fool Me Once &     0.061 &                Fool Me Once &     0.059 &  Nice Meta Winner Ensemble &     0.076 &           Nice Meta Winner &     0.104 \\
+12 &                      DBS &     0.071 &  PSO Gambler 2\_2\_2 Noise 05 &     0.067 &       EvolvedLookerUp1\_1\_1 &     0.077 &         NMWE Deterministic &     0.109 \\
+13 &            DoubleCrosser &     0.072 &              Evolved FSM 16 &     0.078 &            NMWE Memory One &      0.08 &            NMWE Memory One &     0.112 \\
+14 &              BackStabber &     0.075 &                  EugineNier &      0.08 &            NMWE Stochastic &     0.085 &  Nice Meta Winner Ensemble &     0.115 \\
 \bottomrule
 \end{tabular}
