--- a/paper/correlations_table.tex
+++ b/paper/correlations_table.tex
@@ -1,6 +1,6 @@
 \begin{tabular}{lggccggccggg}
     \toprule
-    &  \multicolumn{2}{g}{Standard} & \multicolumn{2}{c}{Noisy} & \multicolumn{2}{g}{Probabilistic ending} &  \multicolumn{2}{c}{Noisy probabilistic ending} \\
+    &  \multicolumn{2}{g}{Standard} & \multicolumn{2}{c}{Noisy $p_n \leq 0.1$} & \multicolumn{2}{g}{Probabilistic ending $p_e \leq 0.1$} &  \multicolumn{2}{c}{Noisy probabilistic ending $p_n \leq 0.1$ \& $p_e \leq 0.1$} \\
 \midrule
 {} &  $r$ &  median score &  $r$ &  median score &  $r$ &  median score &  $r$ &  median score \\
 \midrule
