--- a/nbs/Random Forest with MAPE.ipynb
+++ b/nbs/Random Forest with MAPE.ipynb
@@ -304,9 +304,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "axlml",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "axlml"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -318,7 +318,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
