--- a/paper/regression_results_on_median_score.tex
+++ b/paper/regression_results_on_median_score.tex
@@ -2,21 +2,21 @@
 \toprule
 {} &  Coef. &  P>|t| &  Coef. &  P>|t| &  Coef. &  P>|t| &  Coef. &  P>|t| \\
 \midrule
-$CC$ to $C$ rate   &  0.043 &  0.000 & -0.380 &  0.000 &  0.223 &  0.000 &  0.078 &    0.0 \\
-$CD$ to $C$ rate   & -0.325 &  0.000 &  0.124 &  0.000 &  0.060 &  0.000 &  0.073 &    0.0 \\
-$C_r$ / $C_{max}$  &      - &      - & -1.044 &  0.000 &      - &      - & -1.252 &    0.0 \\
-$C_r$ / $C_{mean}$ &  0.552 &  0.000 & -0.101 &  0.000 & -1.137 &  0.000 & -0.088 &    0.0 \\
-$C_{max}$          &  0.056 &  0.000 &      - &      - & -0.045 &  0.081 & -1.396 &    0.0 \\
-$C_{mean}$         &  1.838 &  0.000 &  3.078 &  0.000 &  1.506 &  0.000 &  3.646 &    0.0 \\
-$C_{min}$          &  0.156 &  0.000 &  1.528 &  0.000 &  0.311 &  0.000 &      - &      - \\
-$C_{min}$ / $C_r$  & -0.049 &  0.000 & -0.378 &  0.000 & -0.204 &  0.000 &      - &      - \\
-$DC$ to $C$ rate   & -0.204 &  0.000 &  0.074 &  0.000 &  0.066 &  0.000 &  0.066 &    0.0 \\
-$k$                & -0.000 &  0.856 &  0.000 &  0.982 &  0.000 &  0.009 &  0.000 &    0.0 \\
-$n$                & -0.000 &  0.000 &      - &      - &      - &      - &      - &      - \\
-$p_e$              &      - &      - &      - &      - &  0.025 &  0.000 & -0.095 &    0.0 \\
-$p_n$              &      - &      - &  0.124 &  0.000 &      - &      - &      - &      - \\
-SSE                & -0.294 &  0.000 & -0.318 &  0.000 &  0.055 &  0.000 &  0.010 &    0.0 \\
-constant           &  0.928 &  0.000 &  1.536 &  0.000 &  2.466 &  0.000 &  2.299 &    0.0 \\
-memory usage       &  0.010 &  0.000 & -0.004 &  0.000 &      - &      - &      - &      - \\
+constant             &  0.928 &  0.000 &  1.082 &  0.000 &  1.259 &  0.000 &  1.642 &  0.000 \\
+$CC$ to $C$ rate     &  0.043 &  0.000 &  0.104 &  0.000 &  0.024 &  0.000 & -0.032 &  0.000 \\
+$CD$ to $C$ rate     & -0.325 &  0.000 & -0.052 &  0.000 & -0.229 &  0.000 & -0.110 &  0.000 \\
+$DC$ to $C$ rate     & -0.204 &  0.000 & -0.076 &  0.000 & -0.102 &  0.000 & -0.070 &  0.000 \\
+SSE                  & -0.294 &  0.000 & -0.186 &  0.000 & -0.131 &  0.000 & -0.109 &  0.000 \\
+$C_{max}$            &  0.056 &  0.000 & -0.060 &  0.011 & -0.005 &  0.849 & -0.240 &  0.000 \\
+$C_{min}$            &  0.156 &  0.000 & -0.159 &  0.000 &  0.012 &  0.385 &  0.083 &  0.005 \\
+$C_{mean}$           &  1.838 &  0.000 &  2.247 &  0.000 &  1.822 &  0.000 &  2.030 &  0.000 \\
+$C_{min}$ / $C_r$    & -0.049 &  0.000 &  0.040 &  0.000 & -0.018 &  0.000 & -0.065 &  0.000 \\
+$C_r$ / $C_{mean}$   &  0.552 &  0.000 & -0.227 &  0.000 &  0.027 &  0.125 & -0.043 &  0.000 \\
+$k$                  & -0.000 &  0.856 & -0.000 &  0.245 & -0.000 &  0.610 & -0.000 &  0.572 \\
+$n$                  & -0.000 &  0.000 &      - &      - &      - &      - &      - &      - \\
+memory usage         &  0.010 &  0.000 &  0.004 &  0.000 &      - &      - &      - &      - \\
+$C_r$ / $C_{median}$ &      - &      - &  0.252 &  0.000 &  0.181 &  0.000 &      - &      - \\
+$p_n$                &      - &      - &  0.770 &  0.000 &      - &      - &  0.494 &  0.000 \\
+$p_e$                &      - &      - &      - &      - &  0.763 &  0.000 &  0.285 &  0.000 \\
 \bottomrule
 \end{tabular}
